--- a/serial8890/index.html
+++ b/serial8890/index.html
@@ -152,7 +152,7 @@ border-top-right-radius: 20px;
 
 <div class="Serial">
 
-    Serial No: <strong>Total Qty: 4</strong>
+    Serial No: <strong>1170412243F5AZB8</strong>
 
     
         
