Update: changes made in your-folder-name

--- a/serial6021/index.html
+++ b/serial6021/index.html
@@ -152,7 +152,7 @@ border-top-right-radius: 20px;
 
 <div class="Serial">
 
-    Serial No: <strong>117B24BAGZ53</strong>
+    Serial No: <strong>117L24AE3GZ53</strong>
 
     
         
