--- a/serial6084/index.html
+++ b/serial6084/index.html
@@ -152,7 +152,7 @@ border-top-right-radius: 20px;
 
 <div class="Serial">
 
-    Serial No: <strong>117B24BARE30</strong>
+    Serial No: <strong>117L24AE3RE30</strong>
 
     
         
