--- a/serial6001/index.html
+++ b/serial6001/index.html
@@ -152,7 +152,7 @@ border-top-right-radius: 20px;
 
 <div class="Serial">
 
-    Serial No: <strong>117B24BAVN03</strong>
+    Serial No: <strong>117L24AE3VN03</strong>
 
     
         
