--- a/serial6007/index.html
+++ b/serial6007/index.html
@@ -152,7 +152,7 @@ border-top-right-radius: 20px;
 
 <div class="Serial">
 
-    Serial No: <strong>117B24BAXP25</strong>
+    Serial No: <strong>117L24AE3XP25</strong>
 
     
         
