--- a/serial6008/index.html
+++ b/serial6008/index.html
@@ -152,7 +152,7 @@ border-top-right-radius: 20px;
 
 <div class="Serial">
 
-    Serial No: <strong>117B24BAWJ80</strong>
+    Serial No: <strong>117L24AE3WJ80</strong>
 
     
         
