--- a/serial6010/index.html
+++ b/serial6010/index.html
@@ -152,7 +152,7 @@ border-top-right-radius: 20px;
 
 <div class="Serial">
 
-    Serial No: <strong>117B24BATC63</strong>
+    Serial No: <strong>117L24AE3TC63</strong>
 
     
         
