--- a/serial6015/index.html
+++ b/serial6015/index.html
@@ -152,7 +152,7 @@ border-top-right-radius: 20px;
 
 <div class="Serial">
 
-    Serial No: <strong>117B24BASQ05</strong>
+    Serial No: <strong>117L24AE3SQ05</strong>
 
     
         
