--- a/serial6017/index.html
+++ b/serial6017/index.html
@@ -152,7 +152,7 @@ border-top-right-radius: 20px;
 
 <div class="Serial">
 
-    Serial No: <strong>117B24BAUF31</strong>
+    Serial No: <strong>117L24AE3UF31</strong>
 
     
         
