--- a/serial6018/index.html
+++ b/serial6018/index.html
@@ -152,7 +152,7 @@ border-top-right-radius: 20px;
 
 <div class="Serial">
 
-    Serial No: <strong>117B24BARY07</strong>
+    Serial No: <strong>117L24AE3RY07</strong>
 
     
         
