--- a/serial6022/index.html
+++ b/serial6022/index.html
@@ -152,7 +152,7 @@ border-top-right-radius: 20px;
 
 <div class="Serial">
 
-    Serial No: <strong>117B24BANJ15</strong>
+    Serial No: <strong>117L24AE3NJ15</strong>
 
     
         
