--- a/serial6030/index.html
+++ b/serial6030/index.html
@@ -152,7 +152,7 @@ border-top-right-radius: 20px;
 
 <div class="Serial">
 
-    Serial No: <strong>117B24BAPF64</strong>
+    Serial No: <strong>117L24AE3PF64</strong>
 
     
         
