--- a/serial6031/index.html
+++ b/serial6031/index.html
@@ -152,7 +152,7 @@ border-top-right-radius: 20px;
 
 <div class="Serial">
 
-    Serial No: <strong>117B24BAEG71</strong>
+    Serial No: <strong>117L24AE3EG71</strong>
 
     
         
