--- a/serial6033/index.html
+++ b/serial6033/index.html
@@ -152,7 +152,7 @@ border-top-right-radius: 20px;
 
 <div class="Serial">
 
-    Serial No: <strong>117B24BAXA73</strong>
+    Serial No: <strong>117L24AE3XA73</strong>
 
     
         
