--- a/serial6036/index.html
+++ b/serial6036/index.html
@@ -152,7 +152,7 @@ border-top-right-radius: 20px;
 
 <div class="Serial">
 
-    Serial No: <strong>117B24BAVM58</strong>
+    Serial No: <strong>117L24AE3VM58</strong>
 
     
         
