--- a/serial6037/index.html
+++ b/serial6037/index.html
@@ -152,7 +152,7 @@ border-top-right-radius: 20px;
 
 <div class="Serial">
 
-    Serial No: <strong>117B24BACY85</strong>
+    Serial No: <strong>117L24AE3CY85</strong>
 
     
         
