--- a/serial6038/index.html
+++ b/serial6038/index.html
@@ -152,7 +152,7 @@ border-top-right-radius: 20px;
 
 <div class="Serial">
 
-    Serial No: <strong>117B24BANE16</strong>
+    Serial No: <strong>117L24AE3NE16</strong>
 
     
         
