--- a/serial6040/index.html
+++ b/serial6040/index.html
@@ -152,7 +152,7 @@ border-top-right-radius: 20px;
 
 <div class="Serial">
 
-    Serial No: <strong>117B24BATN61</strong>
+    Serial No: <strong>117L24AE3TN61</strong>
 
     
         
