--- a/serial6046/index.html
+++ b/serial6046/index.html
@@ -152,7 +152,7 @@ border-top-right-radius: 20px;
 
 <div class="Serial">
 
-    Serial No: <strong>117B24BAZV27</strong>
+    Serial No: <strong>117L24AE3ZV27</strong>
 
     
         
