--- a/serial6047/index.html
+++ b/serial6047/index.html
@@ -152,7 +152,7 @@ border-top-right-radius: 20px;
 
 <div class="Serial">
 
-    Serial No: <strong>117B24BAUG04</strong>
+    Serial No: <strong>117L24AE3UG04</strong>
 
     
         
