--- a/serial6049/index.html
+++ b/serial6049/index.html
@@ -152,7 +152,7 @@ border-top-right-radius: 20px;
 
 <div class="Serial">
 
-    Serial No: <strong>117B24BASB43</strong>
+    Serial No: <strong>117L24AE3SB43</strong>
 
     
         
