--- a/serial6054/index.html
+++ b/serial6054/index.html
@@ -152,7 +152,7 @@ border-top-right-radius: 20px;
 
 <div class="Serial">
 
-    Serial No: <strong>117B24BAVC08</strong>
+    Serial No: <strong>117L24AE3VC08</strong>
 
     
         
