--- a/serial6060/index.html
+++ b/serial6060/index.html
@@ -152,7 +152,7 @@ border-top-right-radius: 20px;
 
 <div class="Serial">
 
-    Serial No: <strong>117B24BAZS26</strong>
+    Serial No: <strong>117L24AE3ZS26</strong>
 
     
         
