--- a/serial6062/index.html
+++ b/serial6062/index.html
@@ -152,7 +152,7 @@ border-top-right-radius: 20px;
 
 <div class="Serial">
 
-    Serial No: <strong>117B24BAXF22</strong>
+    Serial No: <strong>117L24AE3XF22</strong>
 
     
         
