--- a/serial6069/index.html
+++ b/serial6069/index.html
@@ -152,7 +152,7 @@ border-top-right-radius: 20px;
 
 <div class="Serial">
 
-    Serial No: <strong>117B24BAVY50</strong>
+    Serial No: <strong>117L24AE3VY50</strong>
 
     
         
