--- a/serial6073/index.html
+++ b/serial6073/index.html
@@ -152,7 +152,7 @@ border-top-right-radius: 20px;
 
 <div class="Serial">
 
-    Serial No: <strong>117B24BAXT83</strong>
+    Serial No: <strong>117L24AE3XT83</strong>
 
     
         
