--- a/serial6074/index.html
+++ b/serial6074/index.html
@@ -152,7 +152,7 @@ border-top-right-radius: 20px;
 
 <div class="Serial">
 
-    Serial No: <strong>117B24BAMU28</strong>
+    Serial No: <strong>117L24AE3MU28</strong>
 
     
         
