--- a/serial6076/index.html
+++ b/serial6076/index.html
@@ -152,7 +152,7 @@ border-top-right-radius: 20px;
 
 <div class="Serial">
 
-    Serial No: <strong>117B24BAZK54</strong>
+    Serial No: <strong>117L24AE3ZK54</strong>
 
     
         
