--- a/serial6081/index.html
+++ b/serial6081/index.html
@@ -152,7 +152,7 @@ border-top-right-radius: 20px;
 
 <div class="Serial">
 
-    Serial No: <strong>117B24BAWN60</strong>
+    Serial No: <strong>117L24AE3WN60</strong>
 
     
         
