--- a/serial6082/index.html
+++ b/serial6082/index.html
@@ -152,7 +152,7 @@ border-top-right-radius: 20px;
 
 <div class="Serial">
 
-    Serial No: <strong>117B24BAKP56</strong>
+    Serial No: <strong>117L24AE3KP56</strong>
 
     
         
