--- a/serial6083/index.html
+++ b/serial6083/index.html
@@ -152,7 +152,7 @@ border-top-right-radius: 20px;
 
 <div class="Serial">
 
-    Serial No: <strong>117B24BAMX93</strong>
+    Serial No: <strong>117L24AE3MX93</strong>
 
     
         
