--- a/serial6089/index.html
+++ b/serial6089/index.html
@@ -152,7 +152,7 @@ border-top-right-radius: 20px;
 
 <div class="Serial">
 
-    Serial No: <strong>117B24BAQM23</strong>
+    Serial No: <strong>117L24AE3QM23</strong>
 
     
         
