--- a/serial6090/index.html
+++ b/serial6090/index.html
@@ -152,7 +152,7 @@ border-top-right-radius: 20px;
 
 <div class="Serial">
 
-    Serial No: <strong>117B24BAGB01</strong>
+    Serial No: <strong>117L24AE3GB01</strong>
 
     
         
