--- a/serial6091/index.html
+++ b/serial6091/index.html
@@ -152,7 +152,7 @@ border-top-right-radius: 20px;
 
 <div class="Serial">
 
-    Serial No: <strong>117B24BAWC87</strong>
+    Serial No: <strong>117L24AE3WC87</strong>
 
     
         
