--- a/serial6093/index.html
+++ b/serial6093/index.html
@@ -152,7 +152,7 @@ border-top-right-radius: 20px;
 
 <div class="Serial">
 
-    Serial No: <strong>117B24BAYR00</strong>
+    Serial No: <strong>117L24AE3YR00</strong>
 
     
         
