--- a/serial6095/index.html
+++ b/serial6095/index.html
@@ -152,7 +152,7 @@ border-top-right-radius: 20px;
 
 <div class="Serial">
 
-    Serial No: <strong>117B24BAVQ49</strong>
+    Serial No: <strong>117L24AE3VQ49</strong>
 
     
         
