--- a/serial6099/index.html
+++ b/serial6099/index.html
@@ -152,7 +152,7 @@ border-top-right-radius: 20px;
 
 <div class="Serial">
 
-    Serial No: <strong>117B24BANT37</strong>
+    Serial No: <strong>117L24AE3NT37</strong>
 
     
         
