Update: changes made in your-folder-name

--- a/serial15961/index.html
+++ b/serial15961/index.html
@@ -152,7 +152,7 @@ border-top-right-radius: 20px;
 
 <div class="Serial">
 
-    Serial No: <strong>117L24AR30E1M</strong>
+    Serial No: <strong>117L24AW30E1M</strong>
 
     
         
