--- a/serial15980/index.html
+++ b/serial15980/index.html
@@ -152,7 +152,7 @@ border-top-right-radius: 20px;
 
 <div class="Serial">
 
-    Serial No: <strong>117L24AR30A0X</strong>
+    Serial No: <strong>117L24AW30A0X</strong>
 
     
         
