--- a/serial15906/index.html
+++ b/serial15906/index.html
@@ -152,7 +152,7 @@ border-top-right-radius: 20px;
 
 <div class="Serial">
 
-    Serial No: <strong>117L24AR30LM6</strong>
+    Serial No: <strong>117L24AW30LM6</strong>
 
     
         
