--- a/serial15910/index.html
+++ b/serial15910/index.html
@@ -152,7 +152,7 @@ border-top-right-radius: 20px;
 
 <div class="Serial">
 
-    Serial No: <strong>117L24AR30UV0</strong>
+    Serial No: <strong>117L24AW30UV0</strong>
 
     
         
