--- a/serial15917/index.html
+++ b/serial15917/index.html
@@ -152,7 +152,7 @@ border-top-right-radius: 20px;
 
 <div class="Serial">
 
-    Serial No: <strong>117L24AR30J7K</strong>
+    Serial No: <strong>117L24AW30J7K</strong>
 
     
         
