--- a/serial15919/index.html
+++ b/serial15919/index.html
@@ -152,7 +152,7 @@ border-top-right-radius: 20px;
 
 <div class="Serial">
 
-    Serial No: <strong>117L24AR30N9P</strong>
+    Serial No: <strong>117L24AW30N9P</strong>
 
     
         
