--- a/serial15926/index.html
+++ b/serial15926/index.html
@@ -152,7 +152,7 @@ border-top-right-radius: 20px;
 
 <div class="Serial">
 
-    Serial No: <strong>117L24AR30D6C</strong>
+    Serial No: <strong>117L24AW30D6C</strong>
 
     
         
