--- a/serial15927/index.html
+++ b/serial15927/index.html
@@ -152,7 +152,7 @@ border-top-right-radius: 20px;
 
 <div class="Serial">
 
-    Serial No: <strong>117L24AR30F7E</strong>
+    Serial No: <strong>117L24AW30F7E</strong>
 
     
         
