--- a/serial15950/index.html
+++ b/serial15950/index.html
@@ -152,7 +152,7 @@ border-top-right-radius: 20px;
 
 <div class="Serial">
 
-    Serial No: <strong>117L24AR30F0J</strong>
+    Serial No: <strong>117L24AW30F0J</strong>
 
     
         
