--- a/serial15952/index.html
+++ b/serial15952/index.html
@@ -152,7 +152,7 @@ border-top-right-radius: 20px;
 
 <div class="Serial">
 
-    Serial No: <strong>117L24AR30S2X</strong>
+    Serial No: <strong>117L24AW30S2X</strong>
 
     
         
