--- a/serial15954/index.html
+++ b/serial15954/index.html
@@ -152,7 +152,7 @@ border-top-right-radius: 20px;
 
 <div class="Serial">
 
-    Serial No: <strong>117L24AR30J4N</strong>
+    Serial No: <strong>117L24AW30J4N</strong>
 
     
         
