--- a/serial15972/index.html
+++ b/serial15972/index.html
@@ -152,7 +152,7 @@ border-top-right-radius: 20px;
 
 <div class="Serial">
 
-    Serial No: <strong>117L24AR30V2Y</strong>
+    Serial No: <strong>117L24AW30V2Y</strong>
 
     
         
