--- a/serial15979/index.html
+++ b/serial15979/index.html
@@ -152,7 +152,7 @@ border-top-right-radius: 20px;
 
 <div class="Serial">
 
-    Serial No: <strong>117L24AR30Y9M</strong>
+    Serial No: <strong>117L24AW30Y9M</strong>
 
     
         
