--- a/serial15981/index.html
+++ b/serial15981/index.html
@@ -152,7 +152,7 @@ border-top-right-radius: 20px;
 
 <div class="Serial">
 
-    Serial No: <strong>117L24AR30B1G</strong>
+    Serial No: <strong>117L24AW30B1G</strong>
 
     
         
