--- a/serial15987/index.html
+++ b/serial15987/index.html
@@ -152,7 +152,7 @@ border-top-right-radius: 20px;
 
 <div class="Serial">
 
-    Serial No: <strong>117L24AR30M7N</strong>
+    Serial No: <strong>117L24AW30M7N</strong>
 
     
         
