--- a/serial15988/index.html
+++ b/serial15988/index.html
@@ -152,7 +152,7 @@ border-top-right-radius: 20px;
 
 <div class="Serial">
 
-    Serial No: <strong>117L24AR30Q8T</strong>
+    Serial No: <strong>117L24AW30Q8T</strong>
 
     
         
